change status buttons to radio buttons

--- a/app/views/user_beers/show.html.erb
+++ b/app/views/user_beers/show.html.erb
@@ -1,15 +1,16 @@
 <header class="align-center">
 	<h2><%= @userbeer.beer.name %></h2>
-
+	<!-- need to update button styling -->
+	<%= render partial: "application/beer_buttons", locals: {user: current_user, beer: @userbeer} %>
 </header>
 
 <div class="box">
-  <!-- need to update button styling -->
-  <p>Status: <%= @userbeer.verbose_status %><%= render partial: "beers/beer_buttons", locals: {user: current_user, beer: @userbeer} %> </p>
-  <p><strong>Brewery: </strong><%= link_to @userbeer.beer.brewery.name, brewery_path(@userbeer.beer.brewery) %></p>
-  <p><strong>Style: </strong><%= link_to @userbeer.beer.category.name, category_path(@userbeer.beer.category) %></p>
-  <p><strong>ABV: </strong><%= @userbeer.beer.abv%> </p>
-  <p><strong>Description: </strong><%= @userbeer.beer.description %></p>
+	<ul class="alt">
+		<li><strong>Brewery: </strong><%= link_to @userbeer.beer.brewery.name, brewery_path(@userbeer.beer.brewery) %></li>
+		<li><strong>Style: </strong><%= link_to @userbeer.beer.category.name, category_path(@userbeer.beer.category) %></li>
+		<li><strong>ABV: </strong><%= @userbeer.beer.abv%>% </li>
+		<li><strong>Description: </strong><%= @userbeer.beer.description %></li>
+	</ul>
 </div>
 
 <h3>My notes:</h3>
