--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -37,7 +37,7 @@
           <header>
             <h3>Beers<br /></h3>
           </header>
-          <p>Explore our beers</p>
+          <p>Explore beers</p>
           <footer>
             <%= link_to "View", beers_path, class: "button" %>
           </footer>
@@ -47,7 +47,7 @@
           <header>
             <h3>Breweries</h3>
           </header>
-          <p>Check out our breweries</p>
+          <p>Check out breweries</p>
           <footer>
             <%= link_to "View", breweries_path, class: "button" %>
           </footer>
