--- a/app/views/application/_beer_buttons.html.erb
+++ b/app/views/application/_beer_buttons.html.erb
@@ -1,9 +1,24 @@
 <!-- button to indicate that you've tried a beer -->
 <!-- this only takes care of when it is on the user beer page -->
-<% if !beer.status %>
+
+<% if beer.verbose_status == "Want to try" %>
   <%= form_tag user_user_beer_path(user.id, beer.id) do %>
     <%= hidden_field_tag('_method', 'put') %>
-    <%= hidden_field_tag "user_beer[status]", true %>
-    <%= submit_tag "Tried" %>
+    <%= radio_button_tag 'status', true %>
+    <%= label_tag :status, "Tried", :value => true %>
+
+    <%= radio_button_tag :status, false, :checked => 'checked' %>
+    <%= label_tag 'status', "Want to try", :value => false %> <br>
+    <%= submit_tag 'update' %>
+  <% end %>
+<% else %>
+  <%= form_tag user_user_beer_path(user.id, beer.id) do %>
+    <%= hidden_field_tag('_method', 'put') %>
+    <%= radio_button_tag 'status', true, :checked => 'checked' %>
+    <%= label_tag :status, "Tried", :value => true %>
+
+    <%= radio_button_tag :status, false %>
+    <%= label_tag 'status', "Want to try", :value => false %>
+    <%= submit_tag('update', class: 'small') %>
   <% end %>
 <% end %>
