add flash messaging to UserBeers#Index page

--- a/app/views/user_beers/index.html.erb
+++ b/app/views/user_beers/index.html.erb
@@ -15,6 +15,7 @@
 
 	<div class="6u$ 12u$(medium)">
 		<% if !@userbeers.empty? %>
+		<%= render partial: 'layouts/flash' %>
 			<div class="table-wrapper">
 				<table>
 					<thead>
