fix flash messaging

--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -12,6 +12,10 @@
       <% end %>
       </ul>
     </div>
+  <% elsif flash.any? %>
+    <div class="box" id="error_explanation">
+      <%= render partial: 'layouts/flash' %>
+    </div>
   <% end %>
 
   <fieldset class="box">
