--- a/app/views/user_beers/index.html.erb
+++ b/app/views/user_beers/index.html.erb
@@ -29,7 +29,7 @@
 					<tbody>
 					<% @userbeers.sort_by_brewery.each do |userbeer| %>
 						<tr>
-							<td><%= link_to userbeer.beer.brewery.name, brewery_path(userbeer.beer.brewery) %></td>
+							<td><%= link_to userbeer.brewery_name, brewery_path(userbeer.beer.brewery) %></td>
 							<td><%= link_to userbeer.beer.name, user_user_beer_path(current_user, userbeer.id) %></td>
 							<td><%= userbeer.beer.abv %>%</td>
 							<td><%= link_to content_tag(:i, nil, class: "fa fa-trash-o fa-6"), [current_user, userbeer], method: :delete, data: {confirm: "Are you sure you want to delete this beer?"}%></td>
