add new feature for breweries in colorado

--- a/app/views/breweries/co_brew.html.erb
+++ b/app/views/breweries/co_brew.html.erb
@@ -1,5 +1,5 @@
 <header class="align-center">
-	<h2>Breweries</h2>
+	<h2>Breweries in Colorado</h2>
 </header>
 
 <%= render partial: 'breweries/brewery_table', locals: {breweries: @breweries} %>
