--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,11 @@
 		<title>BeerMe</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/stylesheets/application.css" />
+		<%= stylesheet_link_tag 'application', media: 'all'%>
+		<%= javascript_include_tag 'application' %>
 		<script src="https://use.fontawesome.com/10d3acd444.js"></script>
 
     <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 	</head>
 	<body class="subpage">
 
