update All Beers button to make GET request to API. not working yet

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
-<%= link_to "All Beers", beers_path %>
-<%= link_to "All Breweries", breweries_path %>
+<%= link_to "All Beers", beers_path, id: "beers" %>
+<%= link_to "All Breweries", breweries_path%>
 <%= link_to "Breweries in Colorado", co_brew_path %>
 <%= link_to "All Types", categories_path %>
 <% if current_user %>
