--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -4,6 +4,7 @@
 
 <div class="row 200%">
 	<div class="6u 12u$(medium) row uniform">
+		<!-- need to figure how how the data is transmitted when you submit the form -->
 			<%= form_tag(beers_path, method: "get", id: "beerFilter") do %>
 				<%= render partial: 'application/category_filter', locals: {categories: @categories} %>
 				<%= render partial: 'application/brewery_filter', locals: {breweries: @breweries} %>
