--- a/app/views/application/_brewery_filter.html.erb
+++ b/app/views/application/_brewery_filter.html.erb
@@ -1,3 +1,3 @@
 <div class="select-wrapper 12u$">
-  <%= select_tag "brewery", options_from_collection_for_select(breweries, "id", "name"), prompt: "All Breweries" %> <br>
+  <%= select_tag "brewery", options_from_collection_for_select(breweries, "id", "name"), prompt: "All Breweries", id: "brewery" %> <br>
 </div>
