--- a/app/views/application/_category_filter.html.erb
+++ b/app/views/application/_category_filter.html.erb
@@ -1,3 +1,3 @@
 <div class="select-wrapper 12u$">
-  <%= select_tag "category", options_from_collection_for_select(categories, "id", "name"), prompt: "All Types" %> <br>
+  <%= select_tag "category", options_from_collection_for_select(categories, "id", "name"), prompt: "All Types", id: "category" %> <br>
 </div>
