--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -5,12 +5,13 @@
 <div class="row 200%">
 	<div class="6u 12u$(medium) row uniform">
 		<!-- need to figure how how the data is transmitted when you submit the form -->
+		<!-- need to keep this as a form otherwise the filters don't work -->
 			<%= form_tag(beers_path, method: "get", id: "beerFilter") do %>
-				<%= render partial: 'application/category_filter', locals: {categories: @categories} %>
-				<%= render partial: 'application/brewery_filter', locals: {breweries: @breweries} %>
-				<div>
+			<%= render partial: 'application/category_filter', locals: {categories: @categories} %>
+			<%= render partial: 'application/brewery_filter', locals: {breweries: @breweries} %>
+				<!-- <div>
 					<%= submit_tag "Apply Filter", id: "applyFilter" %>
-				</div>
+				</div> -->
 			<% end %>
 	</div>
 
