update task list

--- a/app/views/application/_beer_table.html.erb
+++ b/app/views/application/_beer_table.html.erb
@@ -1,3 +1,4 @@
+<!-- this is used on breweries#show and categories#show still - consider creating an ajax friendly partial that is used by those pages -->
 <% if !beers.empty? %>
   <div class="table-wrapper">
     <table>
