--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<%= stylesheet_link_tag 'application', media: 'all'%>
 		<%= javascript_include_tag 'application' %>
-		<script src="https://use.fontawesome.com/10d3acd444.js"></script>
+		<!-- <script src="https://use.fontawesome.com/10d3acd444.js"></script> -->
 
     <%= csrf_meta_tags %>
 	</head>
@@ -38,10 +38,10 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
+			<!-- <script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="assets/js/main.js"></script> -->
 
 	</body>
 </html>
