--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -13,11 +13,8 @@
 
 <div class="row 200%">
 	<div class="6u 12u$(medium)">
-		<%= form_tag("/breweries/#{@brewery.id}", method: "get") do %>
+		<%= form_tag("/breweries/#{@brewery.id}", method: "get", id: "categoryFilter") do %>
       <%= render partial: 'application/category_filter', locals: {categories: @categories} %>
-			<div>
-				<%= submit_tag "Apply Filter" %>
-			</div>
 	  <% end %>
 	</div>
 
