attempt to update breweries#index to use API. still needs work - beer list keeps rendering

--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -2,4 +2,15 @@
 	<h2>Breweries</h2>
 </header>
 
-<%= render partial: 'breweries/brewery_table', locals: {breweries: @breweries} %>
+<div class="center">
+	<table>
+		<thead>
+			<tr>
+				<th>Brewery</th>
+				<th>Location</th>
+			</tr>
+		</thead>
+		<tbody>
+		</tbody>
+	</table>
+</div>
