attempt to fix issues by moving to page specific js

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<%= stylesheet_link_tag 'application', media: 'all'%>
-		<%= javascript_include_tag 'application' %>
+		<!-- <%= javascript_include_tag 'application' %> -->
+		<%= javascript_include_tag params[:controller] %>
 
     <%= csrf_meta_tags %>
 	</head>
@@ -35,6 +36,6 @@
 				  </div>
 				</div>
 			</footer>
-			
+
 	</body>
 </html>
