--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<%= stylesheet_link_tag 'application', media: 'all'%>
-		<!-- <%= javascript_include_tag 'application' %> -->
-		<%= javascript_include_tag params[:controller] %>
+		<%= javascript_include_tag 'application' %>
 
     <%= csrf_meta_tags %>
 	</head>
