get category filter on breweries#show working via js

--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -19,6 +19,17 @@
 	</div>
 
 	<div class="6u$ 12u$">
-		<%= render partial: 'application/beer_table', locals: {beers: @beers} %>
+		<div class="table-wrapper">
+	    <table>
+	      <thead>
+	        <tr>
+	          <th>Name</th>
+	          <th>Abv</th>
+	        </tr>
+	      </thead>
+	      <tbody>
+				</tbody>
+	    </table>
+	  </div>
 	</div>
 </div>
