add categories.js and update categories controller to respond to json

--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -23,6 +23,7 @@
 	    <table>
 	      <thead>
 	        <tr>
+						<th>Brewery</th>
 	          <th>Name</th>
 	          <th>Abv</th>
 	        </tr>
