--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -12,11 +12,9 @@
 
 <div class="row 200%">
 	<div class="6u 12u$(medium)">
-		<%= form_tag("/categories/#{@category.id}", method: "get") do %>
+		<%= form_tag("/categories/#{@category.id}", method: "get", id:
+	"breweryFilter") do %>
 			<%= render partial: 'application/brewery_filter', locals: {breweries: @breweries} %>
-			<div>
-				<%= submit_tag "Apply Filter" %>
-			</div>
 	  <% end %>
 	</div>
 
