add next button to beers#show

--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -8,3 +8,9 @@
   <p><strong>ABV: </strong><%= @beer.abv%>% </p>
   <p><strong>Description: </strong><%= @beer.description %></p>
 </div>
+
+<div class="js-next align-right">
+	<!-- probably want this whole thing to be a clickable area -->
+	<!-- also want the button to be on the RHS of Next but not sure how to make that one link -->
+	<a href="#">Next<i class="icon fas fa-arrow-circle-right js-next"></i></a>
+</div>
