--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -9,8 +9,12 @@
   <p><strong>Description: </strong><%= @beer.description %></p>
 </div>
 
-<div class="js-next align-right">
-	<!-- probably want this whole thing to be a clickable area -->
-	<!-- also want the button to be on the RHS of Next but not sure how to make that one link -->
-	<a href="#">Next<i class="icon fas fa-arrow-circle-right js-next"></i></a>
+<!-- probably want this whole thing to be a clickable area -->
+<!-- also want the button to be on the RHS of Next but not sure how to make that one link -->
+<!-- how do i get the icon to be green too? -->
+
+<div class="js-next" data-id="<%= @beer.id %>">
+	<a href="#">NEXT</a>&nbsp;<i class="icon fas fa-arrow-circle-right fa-lg"></i>
 </div>
+
+<!-- <button class="icon:after fas fa-arrow-circle-right fa-sm"><span>Next</span></button> -->
