--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,11 +1,13 @@
-<header class="align-center">
-	<h2><%= @brewery.name %></h2>
-  <p><%= @brewery.location %></p>
+<header class="align-center" id="breweryHeader" data-id="<%= @brewery.id %>">
+	<h2 id="breweryName"><%= @brewery.name %></h2>
+	<p><i class="icon fas fa-chevron-circle-left fa-lg"></i><a href="#" class="js-prev">PREV</a> &nbsp; &nbsp;
+	<a href="#" class="js-next">NEXT</a><i class="icon fas fa-chevron-circle-right fa-lg"></i></p>
+  <p id="breweryLocation"><%= @brewery.location %></p>
 </header>
 
 <% if @brewery.description %>
   <div class="box">
-    <p><%= @brewery.description %></p>
+    <p id="breweryDescription"><%= @brewery.description %></p>
   </div>
 <% end %>
 
