--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,5 +1,7 @@
-<header class="align-center">
+<header class="align-center" id="beerHeader" data-id="<%= @beer.id %>">
 	<h2 id="beerName"><%= @beer.name %></h2>
+	<p><i class="icon fas fa-chevron-circle-left fa-lg"></i><a href="#" class="js-prev">PREV</a> &nbsp; &nbsp;
+	<a href="#" class="js-next">NEXT</a><i class="icon fas fa-chevron-circle-right fa-lg"></i></p>
   <p>Brewery: <a href="/breweries/<%= @beer.brewery.id %>" id="breweryName"><%= @beer.brewery.name %> </a></p>
 </header>
 
@@ -14,8 +16,8 @@
 <!-- also want the button to be on the RHS of Next but not sure how to make that one link -->
 <!-- how do i get the icon to be green too? -->
 
-<div class="js-next" data-id="<%= @beer.id %>">
+<!-- <div class="js-next" data-id="<%= @beer.id %>">
 	<a href="#">NEXT</a>&nbsp;<i class="icon fas fa-chevron-circle-right fa-lg"></i>
-</div>
+</div> -->
 
 <!-- <button class="icon:after fas fa-arrow-circle-right fa-sm"><span>Next</span></button> -->
