get some userbeer data to display on index page

--- a/app/views/user_beers/index.html.erb
+++ b/app/views/user_beers/index.html.erb
@@ -14,6 +14,24 @@
 	</div>
 
 	<div class="6u$ 12u$(medium)">
+		<%= render partial: 'layouts/flash' %>
+		<div class="table-wrapper">
+			<table>
+				<thead>
+					<tr>
+						<th>Brewery</th>
+						<th>Name</th>
+						<th>Abv</th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+				</tbody>
+			</table>
+		</div>
+	</div>
+
+	<!-- <div class="6u$ 12u$(medium)">
 		<% if !@userbeers.empty? %>
 		<%= render partial: 'layouts/flash' %>
 			<div class="table-wrapper">
@@ -58,5 +76,5 @@
 					</table>
 				</div>
 			<% end %>
-	</div>
+	</div> -->
 </div>
