--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -7,7 +7,7 @@
 <% if @category.description %>
 <!-- probably need to update this conditional since @category won't be a thing when jquery/AJAX is used to update -->
   <div class="box">
-    <p id="categoryDescription"><%= @category.description %></p>
+    <p id="categoryDescription"></p>
   </div>
 <% end %>
 
