--- a/app/views/user_beers/show.html.erb
+++ b/app/views/user_beers/show.html.erb
@@ -8,8 +8,8 @@
 		<ul class="alt">
 			<li><strong>Brewery: </strong><a href="#" id="breweryName"></a> </li>
 			<li><strong>Style: </strong><a href="#" id="categoryName"></a></li>
-			<li id="beerABV"></li>
-			<li id="beerDescription"></li>
+			<li><strong>ABV: </strong><span id="beerABV"></span></li>
+			<li><strong>Description: </strong><span id="beerDescription"></span></li>
 		</ul>
 	</div>
 
