PREV/NEXT buttons fetch corresponding userbeer and render it via jQuery/AJAX

--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,4 +1,4 @@
-<header class="align-center" id="beerHeader" data-id="<%= @beer.id %>">
+<header class="align-center" id="beerHeader">
 	<h2 id="beerName"><%= @beer.name %></h2>
 	<p><i class="icon fas fa-chevron-circle-left fa-lg"></i><a href="#" class="js-prev">PREV</a> &nbsp; &nbsp;
 	<a href="#" class="js-next">NEXT</a><i class="icon fas fa-chevron-circle-right fa-lg"></i></p>
