--- a/app/views/user_beers/show.html.erb
+++ b/app/views/user_beers/show.html.erb
@@ -1,5 +1,5 @@
-<header class="align-center">
-	<h2><%= @userbeer.name %></h2>
+<header class="align-center" id="userBeerHeader">
+	<h2 id="beerName"></h2>
 	<p><i class="icon fas fa-chevron-circle-left fa-lg"></i><a href="#" class="js-prev">PREV</a> &nbsp; &nbsp;
 	<a href="#" class="js-next">NEXT</a><i class="icon fas fa-chevron-circle-right fa-lg"></i></p>
 </header>
