--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -32,11 +32,35 @@
 	<div class="6u 12u$(medium)">
 		<h4>Add New Beer</h4>
 
+		<%= form_for @beer do |f|%>
+		<div class="row uniform">
+
+			<div class="6u 12u$(xsmall)">
+				<%= f.label :name %>
+				<%= f.text_field :name %>
+			</div>
+
+			<div class="6u 12u$(xsmall)">
+				<%= f.label :abv %>
+				<%= f.text_field :abv %>
+			</div>
+
+			<div class="12u$">
+				<%= f.label :description %>
+				<%= f.text_area :description %>
+			</div>
+
+			<div class="6u 12u$(xsmall)">
+		  	<%= f.submit "Add Beer" %>
+			</div>
+		</div>
+		<% end %>
+		<!--
 		<%= form_tag(beers_path, method: "post", id: "beerForm") do %>
 		<div class="row uniform">
 
 			<div class="6u 12u$(xsmall)">
-				<%= label_tag "Name*" %>
+				<%= label_tag "[beer]name", "Name*" %>
 				<%= text_field_tag "Name" %>
 			</div>
 
@@ -54,7 +78,7 @@
 		  	<%= submit_tag "Add Beer" %>
 			</div>
 		</div>
-		<% end %>
+		<% end %> -->
 	</div>
 
 </div>
